# GenSim

./: .gitignore  CMakeLists.txt  README.md
demo/: GCF_000836845.1_ViralProj14021_genomic.fna  demo.cpp  example_sequences.fasta
gensim/: CMakeLists.txt  gensim.cpp
gensim/include/: gensim.hpp
include/: CMakeLists.txt  gensim.cpp
include/gensim/: gensim.hpp
tests/: test_base.cpp  test_sample.fasta
